--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,4 +21,9 @@
  *= require bootstrap-modal
  *= require waiting_lists
  *= require users
+ *= require account_information
+ *= require account_history
+ *= require bootstrap-override
+ *= require account_withdraw
+ *= require refer
  */
