--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <![endif]-->
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
+    <%= yield :head %>
   </head>
 
   <body class='<%=page_class%>' id='<%= page_id %>'>
@@ -19,4 +20,7 @@
     <%= render 'shared/footer' %>
   </body>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
+  <%= yield :after_js %>
+
 </html>
