Add helper for showing states/provinces

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@
  *= require bootstrap-modal
  *= require waiting_lists
  *= require users
+ *= require account
  *= require account_information
  *= require account_history
  *= require bootstrap-override
