--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
       <script src="//https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+
+    <%= tag :meta, :name => 'stripe-key', :content => Rails.configuration.stripe[:publishable_key] %>
+
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
     <%= yield :head %>
@@ -19,6 +22,7 @@
     </div>
     <%= render 'shared/footer' %>
   </body>
+  <%= javascript_include_tag 'https://js.stripe.com/v1/' %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 
   <%= yield :after_js %>
