--- a/app/assets/stylesheets/account.css.scss
+++ b/app/assets/stylesheets/account.css.scss
@@ -1,7 +1,17 @@
 // Place all the styles related to the Account controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#creditcard .error {
-  color: #A94442;
+
+#creditcard {
+  .error {
+    color: #A94442;
+  }
+  .hidden-section {
+    display: none;
+  }
+  .display-value {
+    font-weight: bold;
+    color: #555;
+  }
 }
 
