--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -1,7 +1,7 @@
 <div class='jumbotron team teamDraft'>
   <div class='contestlive'>
     <strong> Contest Live In</strong>
-    <%= countdown_tag @contest.contest_start %>
+    <%= countdown_tag @contest.start_at %>
   </div>
   <h1>Draft Your Team</h1>
 
