--- a/app/views/contests/_contest.html.erb
+++ b/app/views/contests/_contest.html.erb
@@ -4,7 +4,9 @@
     <%= contest.sport %>
     <%= image_tag "sports/#{contest.sport.downcase}.png" %>
   </td>
-  <td><%= countdown_tag contest.start_at %></td>
+  <td data-value=<%= contest.contest_start %>>
+    <%= countdown_tag contest.start_at %>
+  </td>
   <td class='entry-fee' data-value=<%= contest.entry_fee %>>
     <%= contest_entry_fee contest %>
    </td>
