Minor changes for working with stripe forms

--- a/app/views/accounts/add_fund.html.erb
+++ b/app/views/accounts/add_fund.html.erb
@@ -27,7 +27,7 @@
                 <tbody>
                   <tr>
                     <td>Card Number</td>
-                    <td class="display-value"><%= @credit_card.card_brand %> xxxxx<%= @credit_card.last_four %></td>
+                    <td class="display-value"><%= @credit_card.card_brand %> xxxxx<%= @credit_card.last_4 %></td>
                   </tr>
                   <tr>
                     <td>Amount</td>
