--- a/app/views/projections/review.html.erb
+++ b/app/views/projections/review.html.erb
@@ -14,12 +14,21 @@
   <tbody>
     <% @projections.each do |proj| %>
       <tr>
-        <td><%= proj.player.name %></td>
-        <td><%= proj.scheduled_game.start_date.in_time_zone('America/New_York') %></td>
-        <td class="text-right"><%= link_to number_with_precision(proj.fp, precision: 2), projection_projection_by_stats_path(proj), style: 'font-size:20px;' %></td>
+        <td rowspan=2><%= proj.player.name %></td>
+        <td rowspan=2><%= proj.scheduled_game.start_date.in_time_zone('America/New_York') %></td>
+        <td rowspan=2 class="text-right"><%= link_to number_with_precision(proj.fp, precision: 2), projection_projection_by_stats_path(proj), style: 'font-size:16px;' %></td>
         <% stats.map {|s| stat_of(proj, s)}.each do |stat| %>
           <% if stat %>
             <td class="text-right"><%= link_to number_with_precision(stat.fp, precision: 3), projection_projection_by_stat_projection_by_stat_and_games_path(proj, stat) %></td>
+          <% else %>
+            <td></td>
+          <% end %>
+        <% end %>
+      </tr>
+      <tr>
+        <% stats.map {|s| lookup_stat(@stats, proj.scheduled_game.stats_event_id, proj.player, s)}.each do |stat| %>
+          <% if stat %>
+            <td class="text-right"><%= number_with_precision(stat.stat_value, precision: 3) %></td>
           <% else %>
             <td></td>
           <% end %>
