use csv in email, not web page, for projection review

--- a/app/views/projections/with_stats.html.erb
+++ b/app/views/projections/with_stats.html.erb
@@ -1,5 +1,5 @@
 <% stats = ["points", "rebounds", "assists", "steals", "blockedShots", "turnovers"] %>
-<table class="table table-striped">
+<table class="table table-striped sortable">
   <thead>
     <tr>
       <th>Player</th>
