Countdown finish message. Add rake task for fetching contests from stats.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -32,7 +32,7 @@
         </ul>
         <ul class='nav navbar-nav navbar-right capital-navbar-right'>
           <li>
-            <%= link_to invite_waiting_lists_path do%>
+            <%= link_to invite_waiting_lists_path,  class: 'refer-link' do%>
               <strong class='green ajax-modal' >Refer Friends for Cash »</strong>
             <%end%>
           </li>
