--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,1 +1,6 @@
 $theme-green: #0FEA6C;
+
+// Application fonts
+$main-font: 'oswald-regular';
+$main-bold-font: 'oswald-bold';
+$main-sans-bold-font: $main-font;
