--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  *= require style
  *= require entries
  *= require lineups
+ *= require balance_block
  *= require bootstrap-sortable
  *= require social-share-button
  *= require bootstrap-modal-bs3patch
@@ -27,4 +28,5 @@
  *= require bootstrap-override
  *= require account_withdraw
  *= require refer
+ *= require footer
  */
