--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -63,7 +63,7 @@
   </div>
 </div>
 
-<table class='contestHead table sortable filter-result'>
+<table class='contestHead main-grid table sortable filter-result'>
   <thead>
   <tr>
     <th data-defaultsort="asc" class="srt-contest-name">CONTEST</th>
