Add live, upcoming, and past contest

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -38,6 +38,8 @@
             <%= link_to 'Home', root_path %>
             <div class="line"></div>
           </li>
+          <li class='<%= menu_classes 'entries' %>'>
+            <%= link_to 'Contests', entries_path %>
           <li class='<%= menu_classes 'contests' %>'>
             <%= link_to 'Contests', contests_path %>
             <div class="line"></div>
