--- a/app/assets/stylesheets/account_history.css
+++ b/app/assets/stylesheets/account_history.css
@@ -7,9 +7,7 @@
 .green {
 	font-weight: normal
 }
-.active {
-	color: #cecece;
-}
+
 .information {
 	width: 100%;
 	padding: 10px 0
@@ -52,10 +50,13 @@ table.personalinformation tr td .green {
 .submitTeam input[type=submit] {
 	margin: 0 0 30px 0;
 }
-.tab-content {
-	min-height: 300px;
-	background: #d1d1d1;
+.accounts_history{
+  .tab-content {
+    min-height: 300px;
+    background: #d1d1d1;
+  }
 }
+
 .showtransactions {
 	padding: 10px 10px 0 0
 }
