--- a/app/views/lineups/_lineup.html.erb
+++ b/app/views/lineups/_lineup.html.erb
@@ -50,12 +50,13 @@
     <footer>
       <ul>
         <% unless lineup.contest.complete? %>
-            <li><span class="green"><%= link_to "Edit »", edit_contest_lineup_path(lineup.contest, lineup) %></span></li>
-            <li><span class="green"><a href="#">Export »</a></span></li>
+          <li><span class="green"><%= link_to "Edit »", edit_contest_lineup_path(lineup.contest, lineup) %></span></li>
+          <li><span class="green"><a href="#">Export »</a></span></li>
         <% end %>
         <li><span class="green"><a href="#">Entries »</a></span></li>
         <% unless lineup.contest.complete? %>
-            <li><span class="green"><a href="#">Challenge »</a></span></li>
+          <li><span class="green"><a href="#">Challenge »</a></span></li>
+          <li><span class="green"><%= link_to 'Submit »', lineup_entries_path(lineup), method: :post %></span></li>
         <% end %>
       </ul>
     </footer>
