Style changes to contest page

--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -33,7 +33,7 @@ table.main-grid > tbody > tr > td {
 table.main-grid .table-btn {
   color: #fff;
   text-transform: uppercase;
-  background-color: #0eea6c;
+  background-color: $theme-green;
   padding: 7px 20px;
   font-size: 18px;
   text-decoration: none;
