--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
       <div class='balanceBlock'>
         <strong>Your Balance</strong>
         <strong class='ajax-modal pull-right' id='add-fund' data-url="<%= add_fund_accounts_path %>">
-          Add Value
+          Add Funds
           <i class="glyphicon glyphicon-plus"></i>
         </strong>
         <h1>
