--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,4 +1,20 @@
-$theme-green: #0FEA6C;
+$theme-green: #0eea6c;
+$theme-alternate-green: #12f089; // lighter green
+
+$theme-light-grey1: #929eaa;
+$theme-light-grey2: #758493;
+
+$theme-medium-grey1: #505e6c;
+$theme-medium-grey2: #2e363e;
+
+$theme-dark-grey1: #2e363e;
+$theme-dark-grey2: #22282d;
+
+// These variables will make it easier to use the vars above
+// hopefully.
+$theme-header-dark: $theme-dark-grey1;
+$theme-main-font-color: $theme-dark-grey1;
+$theme-dropdown-bg: $theme-dark-grey1;
 
 // Application fonts
 $main-font: 'oswald-regular';
