--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -19,6 +19,20 @@
       </ul>
     </div>
   </div>
+  <div class="col-md-6">
+    <a class="join-link pull-right" href="#">
+      Start or join a private contest
+      <i class="glyphicon glyphicon-chevron-right"></i>
+    </a>
+  </div>
+</div>
+
+<div class="contest-help">
+  <span>50/50: Finish in the top half and win the prize</span>
+  <span>
+    H2H: Randomly matched one-on-one contests.
+    *If there is an odd number of entrants the last player sits out.
+  </span>
 </div>
 
 <table class='contestHead main-grid table sortable filter-result'>
