--- a/app/views/projections/with_stats.html.erb
+++ b/app/views/projections/with_stats.html.erb
@@ -16,10 +16,10 @@
       <tr>
         <td><%= link_to proj.player.name, stats_by_game_projections_path(player_id: proj.player.id) %></td>
         <td><%= proj.scheduled_game.start_date.in_time_zone('America/New_York') %></td>
-        <td class="text-right"><%= link_to number_with_precision(proj.fp, precision: 2), projection_projection_by_stats_path(proj), style: 'font-size:20px;' %></td>
+        <td class="text-right"><%= link_to "%.2f" % proj.fp, projection_projection_by_stats_path(proj), style: 'font-size:20px;' %></td>
         <% stats.map {|s| stat_of(proj, s)}.each do |stat| %>
           <% if stat %>
-            <td class="text-right"><%= link_to number_with_precision(stat.fp, precision: 3), projection_projection_by_stat_projection_by_stat_and_games_path(proj, stat) %></td>
+            <td class="text-right"><%= link_to "%.3f" % stat.fp, projection_projection_by_stat_projection_by_stat_and_games_path(proj, stat) %></td>
           <% else %>
             <td></td>
           <% end %>
