--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,311 +1,425 @@
-<div class="lineups">
-<div class="welcomeNote">Enter the Game of your choice, then Select your Lineup and Win Cash.</div>
-<h2>MY LINEUPS</h2>
-<div class="filter_row">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="styled-select_2">
-        <select>
-          <option>FILTER VIEW</option>
-          <option>ALL TIME</option>
-        </select>
-      </div>
-    </div>
-    <div class="col-md-8">
-      <ul class="nav navbar-nav navbar-right capital-navbar-right">
-        <li class="dropdown createnewlineups">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="green">Create New Listings »</span></a>
-          <ul class="dropdown-menu" style="background:none; border:none; box-shadow:none">
-            <li style="box-shadow:none">
-              <div class="uparrow"><img src="images/arrow-top.png" alt=""></div>
-              <div class="container capitalcontent" style="   border: 2px solid #C2C2C2;
-                      left: -487px;
-                      margin: 10px 0 0;
-                      position: absolute;
-                      right: 0;
-                      width: 962px;">
-                <div class="lineups">
-                  <div class="capitalpopover">
-                    <div class="popoverTitle">
-                      <h2>Create New Lineup</h2>
-                      <button type="button" class="btnClose" data-dismiss="modal">X</button>
-                    </div>
-                    <p class="message" style="text-align:left">THERE ARE A FEW THINGS TO KNOW BEFORE YOU CAN BEGIN
-                      BUILDINGG YOUR LINEUP. THE QUESTIONS BELOW HELP US DETERMINE WHICH PLAYERS ARE AVAILABLE FOR
-                      DRAFTING IN THE NEXT STEP.</p>
-                    <strong class="number">1</strong>
-
-                    <h2 class="number">WHAT SPORT DO YOU WANT TO CREATE A LINEUP FOR?</h2>
-                    <ul>
-                      <li><a href="#">NFL</a></li>
-                      <li><a href="#">NBA</a></li>
-                      <li><a href="#">CBB</a></li>
-                      <li><a href="#">NHL</a></li>
-                    </ul>
-                    <div class="clear">&nbsp;</div>
-                    <strong class="number">2</strong>
-
-                    <h2 class="number">THERE ARE MULTIPLE CONTEST START TIMES CURRRENTLY LISTED FOR THE SPORT YOU’VE
-                      SELECTED. PLEASE SELECT A START TIME.</h2>
-                    <ul>
-                      <li><a href="#">12/10 7:00PM (8 games)</a></li>
-                      <li><a href="#">12/10 7:00PM (9 games)</a></li>
-                      <li><a href="#">12/10 10:00PM (2 games) </a></li>
-                    </ul>
-                  </div>
-                  <div class="buttonlineup">
-                    <input type="button" value="Cancel" class="cancel"/>
-                    <input type="button" value="Continue" class="continue cancel"/>
-                  </div>
-
-                  <!---Line Ups--->
-                </div>
-              </div>
-            </li>
-          </ul>
-        </li>
-        <li><span class="green"><a href="#">Global Player Swap »</a></span></li>
-      </ul>
-    </div>
-  </div>
+<div class="container capitalcontent">
+<!--Login Section-->
+<br>
+<ul class="list-inline title">
+  <li>
+    <h2>DAILY NBA FREEROLL </h2>
+  </li>
+  <li><span>10x $300k nfl bomb entries</span></li>
+  <li><a href="#">LIVE IN PLAY</a></li>
+  <li><span>Started 7:00pm ET 12/18</span></li>
+</ul>
+<div class="clearfix">&nbsp;</div>
+<!--Tab Section-->
+<div class="light_grey freerollbox">
+  <ul class="list-inline">
+    <li>
+      <h4><strong>Multiplayer League</strong></h4>
+    </li>
+    <li>
+      <h4>6325 Entries</h4>
+    </li>
+    <li>
+      <h4><strong>Entry:</strong></h4>
+    </li>
+    <li>
+      <h4>$0</h4>
+    </li>
+    <li><a href="#"><span class="green">$0.00 Prize Pool</span></a></li>
+  </ul>
 </div>
+<!--/Tab Section-->
 
-<!--/Filter-->
-<div class="clear">&nbsp;</div>
-<div class="row">
-<div class="col-md-4">
-  <div class="gridbox upcoming">
-    <!---Box Header-->
-    <header>
-      <div class="pull-left"><img src="/assets/sports/nfl.png" alt=""/><strong>NFL</strong></div>
-      <div class="pull-right"><strong>UPCOMING</strong>: 52:34:46</div>
-    </header>
-    <ul class="summary">
-      <li># of Entries</li>
-      <li>PMR</li>
-      <li>REM.Salary</li>
-    </ul>
-    <ul class="summary">
-      <li>1</li>
-      <li>540</li>
-      <li>$0</li>
-    </ul>
-    <!---/Box Header-->
-    <table class="tab lineup">
-      <thead>
-      <tr>
-        <th>POS</th>
-        <th>PLAYER</th>
+<div class="clearfix">&nbsp;</div>
+<!--Status Table-->
+<ul class="list-inline freeroll_status">
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+<li>
+  <table class="status">
+    <tbody>
+    <tr class="white">
+      <td>UTA</td>
+      <td>86</td>
+    </tr>
+    <tr>
+      <td>ORL</td>
+      <td>82</td>
+    </tr>
+    <tr>
+      <td colspan="2"><span>FINAL</span></td>
+    </tr>
+    </tbody>
+  </table>
+</li>
+</ul>
 
-        <th>FPPG</th>
-        <th>&nbsp;</th>
-      </tr>
-      </thead>
+<!--/.Status Table-->
+
+<!--List Area-->
+<table class="freeroll table-responsive">
+  <tbody>
+  <tr>
+    <th>POS</th>
+    <th>&nbsp;</th>
+    <th>USER</th>
+    <th>QUARTERS REMAINING</th>
+    <th>SCORE</th>
+    <th>PRIZES</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td><%= image_tag "user.png", class: "user"%></td>
+    <td><span class="green">julius100</span></td>
+    <td>5
+      <progress value="10" max="100"></progress>
+    </td>
+    <td>335.2</td>
+    <td>$300K NFL Bomb Entry</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td><%= image_tag "user.png", class: "user"%></td>
+    <td><span class="green">julius100</span></td>
+    <td>5
+      <progress value="20" max="100"></progress>
+    </td>
+    <td>335.2</td>
+    <td>$300K NFL Bomb Entry</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td><%= image_tag "user.png", class: "user"%></td>
+    <td><span class="green">julius100</span></td>
+    <td>5
+      <progress value="50" max="100"></progress>
+    </td>
+    <td>335.2</td>
+    <td>$300K NFL Bomb Entry</td>
+  </tr>
+  </tbody>
+</table>
+<div class="clearfix">&nbsp;</div>
+<span class="green pull-right">NEXT »</span>
+<!--/List Area-->
+<div class="clearfix">&nbsp;</div>
+
+<div class="col-md-5 scorecard pull-left">
+  <div class="col-md-2 panelOne"><strong class="panelStrong">POS</strong>
+
+    <h2 class="panelHeading">831</h2>
+  </div>
+  <div class="col-md-8 panelTwo">
+    <p><%= image_tag "user.png", class: "user"%> <span class="green">julius100</span></p>
+
+    <div class="clearfix">&nbsp;</div>
+    <p class="quarters"> 6 Quarters Remaining
+      <progress value="20" max="100"></progress>
+    </p>
+  </div>
+  <div class="col-md-2 panelThree"><strong class="panelStrong">SCORE</strong>
+
+    <h2 class="panelHeading">270.2</h2>
+  </div>
+  <div class="clearfix">&nbsp;</div>
+  <!--Score Card-->
+  <div class="scorecard2">
+    <table class="scorecardTable" cellpadding="10" cellspacing="10">
       <tbody>
       <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
+        <td><h1 class="light_grey">PG</h1></td>
+        <td><strong>Damian Lillard</strong>
 
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>x</td>
-      </tr>
-      <tr>
-        <td colspan="4">&nbsp;</td>
+          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
+            36 P, 6 R, 6 A, 3 S, 1 B</p>
+        </td>
+        <td>
+          $79 <br>
+          SALARY
+        </td>
+        <td>27.5% <br>
+          OWNED
+        </td>
+        <td><h1>57.2</h1></td>
       </tr>
       </tbody>
     </table>
-    <p class="small"><strong>Last Edit:</strong> Dec 10 2013 3:49PM EST</p>
-    <footer>
-      <ul>
-        <li><span class="green"><a href="#">Edit »</a></span></li>
-        <li><span class="green"><a href="#">Export »</a></span></li>
-        <li><span class="green"><a href="#">Entries »</a></span></li>
-        <li><span class="green"><a href="#">Challenge »</a></span></li>
-      </ul>
-    </footer>
   </div>
-</div>
-<div class="col-md-4">
-  <div class="gridbox complete">
-    <!---Box Header-->
-    <header>
-      <div class="leftside"><img src="/assets/sports/nfl.png" alt=""/><strong>NFL</strong></div>
-      <div class="rightside"><strong>COMPLETE</strong></div>
-    </header>
-    <ul class="summary">
-      <li># of Entries</li>
-      <li>PMR</li>
-      <li>REM.Salary</li>
-    </ul>
-    <ul class="summary">
-      <li>1</li>
-      <li>540</li>
-      <li>$0</li>
-    </ul>
-    <!---/Box Header-->
-    <table class="tab lineup">
-      <thead>
-      <tr>
-        <th>POS</th>
-        <th>PLAYER</th>
-
-        <th>FPPG</th>
-        <th>&nbsp;</th>
-      </tr>
-      </thead>
+  <div class="clearfix">&nbsp;</div>
+  <div class="scorecard2">
+    <table class="scorecardTable" cellpadding="10" cellspacing="10">
       <tbody>
       <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
+        <td><h1 class="light_grey">PG</h1></td>
+        <td><strong>Damian Lillard</strong>
 
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td><strong>QB</strong><span>&nbsp;</span></td>
-        <td><span class="green">Phillip Rivers</span></td>
-
-        <td>24.5</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td colspan="4"><strong>FANTASY POINTS</strong>: 126.7</td>
+          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
+            36 P, 6 R, 6 A, 3 S, 1 B</p>
+        </td>
+        <td>
+          $79 <br>
+          SALARY
+        </td>
+        <td>27.5% <br>
+          OWNED
+        </td>
+        <td><h1 class="greeScore">57.2</h1></td>
       </tr>
       </tbody>
     </table>
-    <p class="small"><strong>Last Edit:</strong> Dec 10 2013 3:49PM EST</p>
-
-    <footer>
-      <ul>
-
-        <li><span class="green"><a href="#">Entries »</a></span></li>
-
-      </ul>
-    </footer>
   </div>
+  <div class="clearfix">&nbsp;</div>
+  <!--End Score Card-->  </div>
+<div class="col-md-5 scorecard pull-right">
+  <div class="col-md-2 panelOne"><strong class="panelStrong">POS</strong>
 
+    <h2 class="panelHeading">831</h2>
+  </div>
+  <div class="col-md-8 panelTwo">
+    <p><%= image_tag "user.png", class: "user"%> <span class="green">julius100</span></p>
+
+    <div class="clearfix">&nbsp;</div>
+    <p class="quarters"> 6 Quarters Remaining
+      <progress value="20" max="100"></progress>
+    </p>
+  </div>
+  <div class="col-md-2 panelThree"><strong class="panelStrong">SCORE</strong>
+
+    <h2 class="panelHeading">270.2</h2>
+  </div>
+  <div class="clearfix">&nbsp;</div>
+  <!--Score Card-->
+  <div class="scorecard2">
+    <table class="scorecardTable" cellpadding="10" cellspacing="10">
+      <tbody>
+      <tr>
+        <td><h1 class="light_grey">PG</h1></td>
+        <td><strong>Damian Lillard</strong>
+
+          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
+            36 P, 6 R, 6 A, 3 S, 1 B</p>
+        </td>
+        <td>
+          $79 <br>
+          SALARY
+        </td>
+        <td>27.5% <br>
+          OWNED
+        </td>
+        <td><h1 class="greeScore">57.2</h1></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="clearfix">&nbsp;</div>
+  <div class="scorecard2">
+    <table class="scorecardTable" cellpadding="10" cellspacing="10">
+      <tbody>
+      <tr>
+        <td><h1 class="light_grey">PG</h1></td>
+        <td><strong>Damian Lillard</strong>
+
+          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
+            36 P, 6 R, 6 A, 3 S, 1 B</p>
+        </td>
+        <td>
+          $79 <br>
+          SALARY
+        </td>
+        <td>27.5% <br>
+          OWNED
+        </td>
+        <td><h1>57.2</h1></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="clearfix">&nbsp;</div>
 </div>
-<div class="col-md-4">
-  <!--<div class="gridbox">&nbsp;</div>-->
-</div>
-</div>
+
 </div>
